<resources>
    <string name="app_name">CityWhisk</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="search_tab">SEARCH</string>
    <string name="home_tab">HOME</string>
    <string name="save_tab">SAVED</string>
    <string name="pref_tab">PREF</string>
    <string name="budgetBar">Budget</string>
    <string name="distanceBar">Distance</string>
    <string name="ratingBar">Rating</string>
    <string name="timeBar">Time</string>
    <string name="applyPrefs">APPLY CHANGES</string>
    <string name="advancedPrefs">Advanced Preferences</string>
    <string name="swipeLeft">swipeLeft</string>
    <string name="swipeRight">swipeRight</string>
	<string name="mapLeftArrow">&lt;</string>
	<string name="mapRightArrow">&gt;</string>
	<string name="delete">Delete</string>
	<string name="address">Address</string>
	<string name="useCurrentLocation">Use Current Location</string>
	<string name="reroute">End at starting location</string>
	<string name="useCustomAddress">Use Custom Address</string>
	<string name="timeAction">Time</string>
	<string name="viewToogle">View</string>
	<string name="myProfile">My Profile</string>
	<string name="sharing">Sharing</string>
	<string name="syncing">Syncing</string>
	<string name="saveItinerary">Save this itinerary</string>
	<string name="settings">Settings</string>
	<string name="howItWorks">How it works</string>
	<string name="privacy">Privacy and Terms</string>
	<string name="nameItin">Name this Itinerary</string>
	<string name="itineraryname">Itinerary Name</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="generating">Generating Itinerary...</string>
	<string name="privacypara1">
	    We want to earn your trust by being transparent about how CityWhisk works. You should read this 
		policy in its entirety. You decide how much information you feel comfortable sharing on CityWhisk 
		and you control how it is distributed through your privacy settings. You should review the default 
		privacy settings and change them if necessary to reflect your preferences. You should also consider 
		your settings whenever you share information.
	</string>
	<string name="privacypara2">
	    In the course of using this Site, you may provide us with personally identifiable information. This 
	    refers to information about you that can be used to contact or identify you, and information on your 
	    use of and activities at our Site that may be connected with you (“Personal Information”). Personal 
	    Information that we collect may include, but is not limited to, your name, phone number, billing 
	    information, email address and home and business postal addresses. Personal Information may also include 
	    information you supply to us concerning your preferences and interests expressed in the course of use of 
	    our Site.
	</string>
	<string name="privacypara3">
	    One of the values of CityWhisk is in understanding the trends and behaviors or our Users. Location-based 
	    services, site activity information, access to devices and browser information, and cookie information may 
	    be collected in order to create a more personalized experience.
	</string>
	<string name="privacyheading1">
	    Information we collect
	</string>
	<string name="addToFav">SAVE ITINERARY</string>
	<string name="favMessage">Unsaved itinerary data will be lost</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="addToItin">Add to Itinerary</string>
	<string name="viewDetails">View Details</string>
	<string name="share">Share</string>
	<string name="privacyheading2">How We Use Your Information</string>
	<string name="privacypara19">CityWhisk, LTD is very concerned with safeguarding your information. We employ reasonable measures designed to protect your information from unauthorized access. No method of transmission over the Internet or via mobile device, or method of electronic storage, is 100% secure. Therefore, while we strive to use commercially acceptable means to protect your personal information, we cannot guarantee its absolute security.</string>
	<string name="privacyheading9">Security</string>
	<string name="privacypara18">We may revise this Privacy Policy from time to time. The most current version of the Privacy Policy will govern our use of information about you. If we make material changes to this Privacy Policy, we will notify you by email or by posting a notice on the Site prior to the effective date of the changes. By continuing to access or use the Site after those changes become effective, you agree to be bound by the revised Privacy Policy.</string>
	<string name="privacyheading8">Modifications</string>
	<string name="privacypara17">Our Services are not directed to persons under 13. If you become aware that your child has provided us with personal information without your consent, please contact us. We do not knowingly collect personal information from children under 13. If we become aware that a child under 13 has provided us with personal information, we take steps to remove such information and terminate the child\'s account.</string>
	<string name="privacyheading7">Children’s Privacy</string>
	<string name="privacypara16">You can close your account at any time. We will remove your public posts from view and/or dissociate them from your account profile, but we may retain information about you for the purposes authorized under this Privacy Policy unless prohibited by law. For example, we may retain information to prevent, investigate, or identify possible wrongdoing in connection with the Site or to comply with legal obligations. Please note that businesses cannot remove their business listings, ratings or reviews by closing their accounts.</string>
	<string name="privacyheading6">Account Termination</string>
	<string name="privacypara15">Where we can provide information access and correction, we will do so for free, except where it would require a disproportionate effort. We aim to maintain our services in a manner that protects information from accidental or malicious destruction. Because of this, after you delete information from our services, we may not immediately delete residual copies from our active servers and may not remove information from our backup systems. </string>
	<string name="privacypara14">Whenever you use our services, we aim to provide you with access to your personal information. If that information is wrong, we strive to give you ways to update it quickly or to delete it – unless we have to keep that information for legitimate business or legal purposes. When updating your personal information, we may ask you to verify your identity before we can act on your request. 
We may reject requests that are unreasonably repetitive, require disproportionate technical effort (for example, developing a new system or fundamentally changing an existing practice), risk the privacy of others, or would be extremely impractical (for instance, requests concerning information residing on backup tapes).</string>
	<string name="privacyheading5">Accessing and updating your personal information</string>
	<string name="privacypara13">Other users may be able to identify you, or associate you with your account if you include personal information in the content you post publicly. You can reduce the risk of being personally identified by using the Site pseudonymously, though doing so could detract from the credibility of your contributions to the Site. Please also note that itineraries you share with other members using the Site are only private to the extent that both you and the sender/recipient keep them private. For example, we do not have any control over whether a recipient of one of your shared itineraries publicly posts it or its contents.</string>
	<string name="privacyheading4">Controlling Your Personal Data</string>
	<string name="privacypara12">Links: The Site may contain links to unaffiliated third party websites. Except as set forth herein, we do not share your personal information with them, and are not responsible for their privacy practices. We suggest you read the privacy policies on all such third party websites.</string>
	<string name="privacypara11">Investigations: We may investigate and disclose information from or about you if we have a good faith belief that such investigation or disclosure is a) reasonably necessary to comply with legal process and law enforcement instructions and orders, such as a search warrant, subpoena, statute, judicial proceeding, or other legal process served on us; b) helpful to prevent, investigate, or identify possible wrongdoing in connection with the Site; or c) protect our rights, reputation, property, or that of our users, affiliates, or the public.</string>
	<string name="privacypara10">Businesses and Partners on CityWhisk: We may share non-personally identifiable information from or about you and your use of the Site with businesses and partners on CityWhisk.</string>
	<string name="privacypara9">Business Transfers: If CityWhisk is involved in a merger, acquisition or asset sale, we will continue to ensure the confidentiality of any personal information and give affected users notice before personal information is transferred or becomes subject to a different privacy policy.</string>
	<string name="privacypara8">Aggregate Information: We may share non-personally identifiable user information in the aggregate with third parties and business partners.</string>
	<string name="privacypara7">Service Providers: Some of the services that are offered through the Site may be provided by third-party providers. We also outsource some of CityWhisk’s functions to third-party providers, such as technical and customer support, tracking and reporting functions, quality assurance testing, payment processing functions, and other services. We may share information from or about you with these third-party providers so that they can perform their services or complete your requests.</string>
	<string name="privacyheading3">Third Parties</string>
	<string name="privacypara5">We use information we obtain by technical means (such as the automatic recording performed by our servers or through the use of cookies) for the above purposes and in order to monitor and analyze use of the Site and our services and for the Site’s technical administration, to increase our Site’s functionality and user-friendliness, to better tailor it to your needs, to generate and derive useful data and information concerning the interests, characteristics and website use behavior of our users, and to verify that visitors to the Site meet the criteria required to process their requests.</string>
	<string name="privacypara6">We may share information about you with third parties as follows:</string>
	<string name="privacypara4">Personal Information is used for the following purposes: (i) to provide and improve our Site, services, features and content, (ii) to administer your membership and your use of our Site, (iii) to enable users to enjoy and easily navigate the Site, (iv) to better understand your needs and interests, (v) to fulfill requests you may make, (vi) to personalize your experience, (vii) to provide or offer software updates and product announcements, and (viii) to provide you with further information and offers from us or third parties that we believe you may find useful or interesting, including newsletters, marketing or promotional materials and other information on services and products offered by us or third parties. If you decide at any time that you no longer wish to receive such communications, please follow the unsubscribe instructions provided in any of the communications or update your “user preferences” information.</string>
	<string name="searchByName">SEARCH\n BY NAME</string>
	<string name="privacyheading0">Privacy Policy</string>
</resources>