<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/favMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/favMessage"
        android:textAlignment="center" />
    
    <Button
        android:id="@+id/favNo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/favYes"
        android:layout_alignBottom="@+id/favYes"
        android:layout_alignParentRight="true"
        android:layout_marginRight="35dp"
        android:text="@string/no" />

    <Button
        android:id="@+id/favYes"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="35dp"
        android:text="@string/yes" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/favNo"/>

</RelativeLayout>