<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/endAtStartCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adressField"
        android:layout_alignParentTop="true"
        android:layout_marginTop="23dp"
        android:text="@string/address"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/exitModifyLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/modifyStartingLocation"
        android:layout_marginTop="26dp"
        android:text="@string/useCurrentLocation" />

    <!-- CheckBox
        android:id="@+id/endAtStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/adressField"
        android:layout_below="@+id/exitModifyLocation"
        android:layout_marginTop="46dp"
        android:text="@string/reroute" /-->

    <Button
        android:id="@+id/modifyStartingLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/adressField"
        android:layout_marginTop="60dp"
        android:text="@string/useCustomAddress" />

    <EditText
        android:id="@+id/adressField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endAtStartCheck"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textPostalAddress" >

        <requestFocus />
    </EditText>

</RelativeLayout>
